force-app/main/default/objects/Relationship__c/fields/People__c.field-meta.xml
<CustomField>
    <fullName>People__c</fullName>
    <label>People</label>
    <referenceTo>People__c</referenceTo>
    <relationshipLabel>Related Pets</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>