force-app/main/default/objects/Relationship__c/fields/Pet__c.field-meta.xml
<CustomField>
    <fullName>Pet__c</fullName>
    <label>Pet</label>
    <referenceTo>Pet__c</referenceTo>
    <relationshipLabel>Related People</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>