force-app/main/default/objects/Relationship__c/fields/Relationship_Description__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Description__c</fullName>
    <label>Relationship Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>