force-app/main/default/objects/Relationship__c/validationRules/Other_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Description</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Relation__c, &quot;Other&quot;), ISNULL( Relationship_Description__c))</errorConditionFormula>
    <errorMessage>Please enter a relationship description or selected a different relation to the pet.</errorMessage>
</ValidationRule>